--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://developers.kakao.com/sdk/JavaScript/kakao.js"></script>
+    <!-- kakao Oauth 구현
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+      Kakao.init("aa40dc1e4bef12d205c79ce6967ae19f");
+      console.log("Kakao.isInitialized : " + Kakao.isInitialized());
+    </script>
+    -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +29,6 @@
     -->
     <title>React App</title>
 
-<<<<<<< HEAD
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <link href="assets/css/ui.css" rel="stylesheet" />
     <link href="assets/css/responsive.css" rel="stylesheet" />
@@ -38,15 +39,6 @@
       src="assets/js/bootstrap.bundle.min.js"
       type="text/javascript"
     ></script>
-=======
-    <link href="./assets/css/bootstrap.css" rel="stylesheet">
-    <link href="./assets/css/ui.css" rel="stylesheet">
-    <link href="./assets/css/responsive.css" rel="stylesheet">
-   
-    <link href="./assets/css/all.min.css" rel="stylesheet">
-    <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
-    <script src="./assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
->>>>>>> dev
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
